--- a/src/app/ui/components/search-results/search-results.component.html
+++ b/src/app/ui/components/search-results/search-results.component.html
@@ -26,9 +26,11 @@
 
     <!-- Filter Sidebar -->
     <div class="col-md-3 mb-4 mb-md-0">
-      <app-filter [availableFilters]="availableFilters" 
-                 [selectedFilters]="selectedFilters"
-                 (filterChange)="onFilterChange($event)">
+      <app-filter 
+        [availableFilters]="availableFilters" 
+        [selectedFilters]="selectedFilters"
+        [isLoading]="isFiltersLoading"
+        (filterChange)="onFilterChange($event)">
       </app-filter>
     </div>
 
@@ -37,10 +39,11 @@
       <div *ngIf="noResults" class="no-results">
         <p>Sorry, no results were found for "{{ searchTerm }}".</p>
       </div>
-
+    
       <app-ui-product-list 
         *ngIf="!noResults" 
-        [products]="products">
+        [products]="products"
+        [loading]="isProductsLoading">
       </app-ui-product-list>
       
       <mat-paginator 
@@ -54,4 +57,5 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
 <app-downbar></app-downbar>
