--- a/src/app/ui/components/category/category.component.html
+++ b/src/app/ui/components/category/category.component.html
@@ -79,16 +79,18 @@
       </div>
 
       <!-- Filter Sidebar -->
-      <div class="col-md-3 mb-4">
-        <app-filter [availableFilters]="availableFilters" [selectedFilters]="selectedFilters"
+      <div class="col-md-3 mb-4 mb-md-0">
+        <app-filter 
+          [availableFilters]="availableFilters" 
+          [selectedFilters]="selectedFilters"
+          [isLoading]="isFiltersLoading"
           (filterChange)="onFilterChange($event)">
         </app-filter>
       </div>
 
       <!-- Product List -->
       <div class="col-md-9 product-list-container">
-        <app-ui-product-list *ngIf="!noResults" [products]="products">
-        </app-ui-product-list>
+        <app-ui-product-list *ngIf="!noResults" [products]="products" [loading]="isProductsLoading"></app-ui-product-list>
 
         <!-- Pagination -->
         <mat-paginator [length]="totalItems" 
