--- a/src/app/ui/components/login/login.component.scss
+++ b/src/app/ui/components/login/login.component.scss
@@ -34,6 +34,7 @@ $link-color: #0000ee;
     max-width: 600px;
 
     .logo-image {
+        cursor: pointer;
         height: 80px;
         width: auto;
         margin: 0 10px;
@@ -155,20 +156,41 @@ $link-color: #0000ee;
 }
 
 .btn-login {
-    width: 100%;
-    padding: 12px;
-    background-color: $primary-color;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 1rem;
-    font-weight: 500;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  position: relative;
+  width: 100%;
+  padding: 12px;
+  background-color: $primary-color;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  min-height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    &:hover {
-        background-color: darken($primary-color, 10%);
-    }
+  &:hover {
+      background-color: darken($primary-color, 10%);
+  }
+
+  &:disabled {
+      cursor: not-allowed;
+      opacity: 0.7;
+  }
+
+  app-button-spinner {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+  }
+
+  .invisible {
+      visibility: hidden;
+  }
 }
 
 .separator {
