--- a/src/app/ui/components/navbar/navbar.component.html
+++ b/src/app/ui/components/navbar/navbar.component.html
@@ -31,6 +31,7 @@
 
             <!-- Search Dropdown -->
             <div class="search-dropdown" *ngIf="isSearchFocused">
+              <app-spinner [spinnerType]="'s2'" *ngIf="searchLoading"></app-spinner>
               <!-- Recent Searches -->
               <div class="recent-searches" *ngIf="recentSearches.length > 0">
                 <div class="recent-searches-header">
@@ -38,7 +39,8 @@
                   <span class="clear-history" (click)="clearSearchHistory()">Clear Search History</span>
                 </div>
                 <ul>
-                  <li *ngFor="let search of recentSearches" (click)="searchForm.get('searchTerm').setValue(search)">
+                  <li *ngFor="let search of recentSearches" 
+                      (click)="onRecentSearchClick(search)">
                     {{search}}
                   </li>
                 </ul>
@@ -113,18 +115,24 @@
     <div class="dropdown-overlay" [class.open]="isAllProductsOpen" (click)="closeDropdownIfClickedOutside($event)">
       <div class="main-content" (click)="$event.stopPropagation()">
         <!-- Categories List -->
-        <div class="categories-list">
-          <ul>
-            <li *ngFor="let category of topLevelCategories"
-              (mouseenter)="!showOnlyMainCategories && selectCategory(category)"
-              (click)="navigateToCategory(category.id)" [class.active]="category === selectedCategory">
-              {{ category.name }}
-            </li>
-          </ul>
+        <div class="categories-list position-relative">
+          <app-spinner [spinnerType]="'s2'" *ngIf="categoryLoading"></app-spinner>
+          <div [class.invisible]="categoryLoading">
+            <ul>
+              <li *ngFor="let category of topLevelCategories"
+                (mouseenter)="!showOnlyMainCategories && selectCategory(category)"
+                (click)="navigateToCategory(category.id)" 
+                [class.active]="category === selectedCategory">
+                {{ category.name }}
+              </li>
+            </ul>
+          </div>
         </div>
 
         <!-- Subcategories -->
         <div class="subcategories" *ngIf="!showOnlyMainCategories">
+          <app-spinner [spinnerType]="'s2'" *ngIf="subcategoryLoading"></app-spinner>
+          <div [class.invisible]="subcategoryLoading">
           <div class="subcategory-header" *ngIf="selectedCategory">
             <h3>{{ selectedCategory.name }}</h3>
             <a href="#" class="view-all">Show All →</a>
@@ -141,11 +149,14 @@
               </ul>
             </li>
           </ul>
+          </div>
         </div>
 
         <!-- Recommended Products -->
         <div class="recommended-products"
           *ngIf="!showOnlyMainCategories && selectedCategory && recommendedProducts?.items?.length > 0">
+          <app-spinner [spinnerType]="'s2'" *ngIf="recommendedLoading"></app-spinner>
+          <div [class.invisible]="recommendedLoading">
           <div class="recommended-header">
             <h3>Recommended {{ selectedCategory.name }}</h3>
             <a href="#" class="view-all">Show All →</a>
@@ -174,6 +185,7 @@
                 <a href="#" class="sign-in">Sign in for your price</a> -->
               </div>
             </div>
+          </div>
           </div>
         </div>
       </div>
