--- a/src/app/ui/components/newsletter-unsubscribe/newsletter-unsubscribe.component.html
+++ b/src/app/ui/components/newsletter-unsubscribe/newsletter-unsubscribe.component.html
@@ -1,3 +1,5 @@
+<app-main-header></app-main-header>
+<app-navbar></app-navbar>
 <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6 text-center">
@@ -40,3 +42,5 @@
       </div>
     </div>
   </div>
+<app-footer></app-footer>
+<app-downbar></app-downbar>
