--- a/src/app/ui/components/product/product-detail/product-detail.component.scss
+++ b/src/app/ui/components/product/product-detail/product-detail.component.scss
@@ -344,7 +344,7 @@ $link-color: #0000ee;
     h3 {
       font-size: 1rem;
       margin-bottom: 0.5rem;
-      color: $secondary-color;
+      color: $text-color;
       font-weight: 500;
     }
 
